--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/kijk2869/discodo.js/issues"
   },
   "dependencies": {
+    "discord.js": "^12.5.3",
     "node-fetch": "^2.6.1",
     "node-version-compare": "^1.0.3",
     "ws": "^7.4.3"
@@ -25,5 +26,6 @@
   },
   "devDependencies": {
     "eslint": "^7.23.0"
-  }
+  },
+  "types": "./typings/index.d.ts"
 }
