--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "ws": "^7.4.3"
   },
   "peerDependencies": {
-    "discord.js": "^13.0.0"
+    "discord.js": "^12.5.3"
   },
   "devDependencies": {
-    "discord.js": "discordjs/discord.js",
+    "discord.js": "^12.5.3",
     "eslint": "^7.23.0"
   },
   "types": "./typings/index.d.ts"
